[package]
name = "jui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytemuck = { version = "1.14.0", features = ["derive"] }
etagere = "0.2.8"
fontdue = "0.7.3"
image = { default-features = false, version = "0.24.7", features = ["png"] }
lru = "0.12.0"
pollster = "0.3.0"
wgpu = "0.18.0"
winit = { version = "0.29.3", features = ["rwh_05"] }
