[package]
name = "jui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytemuck = { version = "1.14", features = ["derive"] }
etagere = "0.2"
freetype-rs = "0.35"
image = { default-features = false, version = "0.24", features = ["png"] }
lru = "0.12"
pollster = "0.3"
wgpu = "0.19"
winit = "0.29" 
